Mini-Lpp/build/expr_parser.output
Terminals unused in grammar

    "=="
    "<>"
    "caso"
    "cerrar"
    "archivo"
    "secuencial"
    "abrir"
    "como"
    "no"
    "div"
    "lectura"
    "lea"
    "tipo"
    "es"
    "registro"
    "escritura"
    "final"
    "leer"
    "escribir"
    "real"
    "cadena"
    Error


Grammar

    0 $accept: start "EOF"

    1 start: empty-EoLList program opt-EoL

    2 program: subtype-section subprogram-decl "inicio" EoLList stmts EoLList "fin"

    3 empty-EoLList: %empty
    4              | EoLList

    5 subtype-section: variable-section
    6                | %empty

    7 subprogram-decl: subprogram-decl-list
    8                | %empty

    9 variable-section: variable-decl EoLList

   10 EoLList: EoLList EoL
   11        | EoL

   12 opt-EoL: EoL
   13        | %empty

   14 variable-decl: variable-decl EoL type ident-list
   15              | type ident-list

   16 ident-list: ident-list "," "ID"
   17           | "ID"

   18 type: "entero"
   19     | "caracter"
   20     | "booleano"
   21     | "arreglo" "[" "intConstant" "]" "de" type

   22 subprogram-decl-list: subprogram-decl-list subprogramDecl
   23                     | subprogramDecl

   24 subprogramDecl: "funcion" "ID" argument-opt ":" type EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL
   25               | "procedimiento" "ID" argument-opt EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL

   26 argument-opt: "(" argument-comma ")"
   27             | %empty

   28 argument-comma: argument-comma "," argument-decl
   29               | argument-decl

   30 argument-decl: "var" type "ID"
   31              | type "ID"

   32 argument-comma-list: argument-comma-list "," argument
   33                    | argument

   34 argument: "stringConstant"
   35         | expr

   36 statement: lvalue "<-" expr
   37          | "llamar" "ID" "(" optional-expr ")"
   38          | "llamar" "ID"
   39          | "escriba" argument-comma-list
   40          | "retorne"
   41          | "retorne" expr
   42          | if-statement
   43          | "mientras" expr "haga" EoLList stmts EoLList "fin" "mientras"
   44          | "repita" EoLList stmts EoLList "hasta" expr
   45          | "para" lvalue "<-" expr "hasta" expr "haga" EoLList stmts EoLList "fin" "para"

   46 stmts: stmts EoLList statement
   47      | statement

   48 exprList: exprList "," expr
   49         | expr

   50 optional-expr: exprList
   51              | %empty

   52 if-statement: "si" expr opt-EoL "entonces" EoLList stmts else-if-block "fin" "si"

   53 else-if-block: EoLList "sino" else-block
   54              | EoLList

   55 else-block: "si" expr opt-EoL "entonces" EoLList stmts else-if-block
   56           | EoLList stmts EoLList

   57 lvalue: "ID"
   58       | "ID" "[" expr "]"

   59 expr: expr "<" prec
   60     | expr "<=" prec
   61     | expr ">" prec
   62     | expr ">=" prec
   63     | expr "!=" prec
   64     | expr "=" prec
   65     | prec

   66 prec: prec "+" term
   67     | prec "-" term
   68     | prec "o" term
   69     | term

   70 term: term "/" power
   71     | term "mod" power
   72     | term "*" power
   73     | term "y" power
   74     | power

   75 power: power "^" factor
   76      | factor

   77 factor: "intConstant"
   78       | "charConstant"
   79       | "verdadero"
   80       | "falso"
   81       | "ID"
   82       | "ID" "(" ")"
   83       | "ID" "(" exprList ")"
   84       | "ID" "[" expr "]"
   85       | "(" expr ")"


Terminals, with rules where they appear

    "EOF" (0) 0
    error (256)
    "+" (258) 66
    "-" (259) 67
    "*" (260) 72
    "/" (261) 70
    "mod" (262) 71
    "^" (263) 75
    "<-" (264) 36 45
    "=" (265) 64
    "==" (266)
    "<>" (267)
    "<" (268) 59
    ">" (269) 61
    "<=" (270) 60
    ">=" (271) 62
    "(" (272) 26 37 82 83 85
    ")" (273) 26 37 82 83 85
    "[" (274) 21 58 84
    "]" (275) 21 58 84
    ":" (276) 24
    "," (277) 16 28 32 48
    "de" (278) 21
    "funcion" (279) 24
    "procedimiento" (280) 25
    "var" (281) 30
    "repita" (282) 44
    "hasta" (283) 44 45
    "caso" (284)
    "cerrar" (285)
    "archivo" (286)
    "secuencial" (287)
    "abrir" (288)
    "como" (289)
    "no" (290)
    "div" (291)
    "inicio" (292) 2 24 25
    "lectura" (293)
    "o" (294) 68
    "entonces" (295) 52 55
    "sino" (296) 53
    "haga" (297) 43 45
    "lea" (298)
    "escriba" (299) 39
    "retorne" (300) 40 41
    "tipo" (301)
    "es" (302)
    "registro" (303)
    "escritura" (304)
    "llamar" (305) 37 38
    "para" (306) 45
    "mientras" (307) 43
    "y" (308) 73
    "fin" (309) 2 24 25 43 45 52
    "final" (310)
    "si" (311) 52 55
    "leer" (312)
    "escribir" (313)
    "entero" (314) 18
    "booleano" (315) 20
    "caracter" (316) 19
    "real" (317)
    "arreglo" (318) 21
    "verdadero" <std::string> (319) 79
    "falso" <std::string> (320) 80
    "ID" <std::string> (321) 16 17 24 25 30 31 37 38 57 58 81 82 83 84
    "cadena" (322)
    "charConstant" <std::string> (323) 78
    "stringConstant" <std::string> (324) 34
    "intConstant" <int> (325) 21 77
    Error (326)
    EoL (327) 10 11 12 14 24 25
    "!=" (328) 63


Nonterminals, with rules where they appear

    $accept (74)
        on left: 0
    start (75)
        on left: 1
        on right: 0
    program <AST::Node*> (76)
        on left: 2
        on right: 1
    empty-EoLList (77)
        on left: 3 4
        on right: 1
    subtype-section <std::vector<AST::Node*>> (78)
        on left: 5 6
        on right: 2 24 25
    subprogram-decl <std::vector<AST::Node*>> (79)
        on left: 7 8
        on right: 2
    variable-section <std::vector<AST::Node*>> (80)
        on left: 9
        on right: 5
    EoLList (81)
        on left: 10 11
        on right: 2 4 9 10 24 25 43 44 45 46 52 53 54 55 56
    opt-EoL (82)
        on left: 12 13
        on right: 1 52 55
    variable-decl <std::vector<AST::Node*>> (83)
        on left: 14 15
        on right: 9 14
    ident-list <std::list<std::string>> (84)
        on left: 16 17
        on right: 14 15 16
    type <AST::Node*> (85)
        on left: 18 19 20 21
        on right: 14 15 21 24 30 31
    subprogram-decl-list <std::vector<AST::Node*>> (86)
        on left: 22 23
        on right: 7 22
    subprogramDecl <AST::Node*> (87)
        on left: 24 25
        on right: 22 23
    argument-opt <std::vector<AST::Node*>> (88)
        on left: 26 27
        on right: 24 25
    argument-comma <std::vector<AST::Node*>> (89)
        on left: 28 29
        on right: 26 28
    argument-decl <AST::Node*> (90)
        on left: 30 31
        on right: 28 29
    argument-comma-list <std::vector<AST::Node*>> (91)
        on left: 32 33
        on right: 32 39
    argument <AST::Node*> (92)
        on left: 34 35
        on right: 32 33
    statement <AST::Node*> (93)
        on left: 36 37 38 39 40 41 42 43 44 45
        on right: 46 47
    stmts <std::vector<AST::Node*>> (94)
        on left: 46 47
        on right: 2 24 25 43 44 45 46 52 55 56
    exprList <std::vector<AST::Node*>> (95)
        on left: 48 49
        on right: 48 50 83
    optional-expr <std::vector<AST::Node*>> (96)
        on left: 50 51
        on right: 37
    if-statement <AST::Node*> (97)
        on left: 52
        on right: 42
    else-if-block <AST::Node*> (98)
        on left: 53 54
        on right: 52 55
    else-block <AST::Node*> (99)
        on left: 55 56
        on right: 53
    lvalue <AST::Node*> (100)
        on left: 57 58
        on right: 36 45
    expr <AST::Node*> (101)
        on left: 59 60 61 62 63 64 65
        on right: 35 36 41 43 44 45 48 49 52 55 58 59 60 61 62 63 64 84 85
    prec <AST::Node*> (102)
        on left: 66 67 68 69
        on right: 59 60 61 62 63 64 65 66 67 68
    term <AST::Node*> (103)
        on left: 70 71 72 73 74
        on right: 66 67 68 69 70 71 72 73
    power <AST::Node*> (104)
        on left: 75 76
        on right: 70 71 72 73 74 75
    factor <AST::Node*> (105)
        on left: 77 78 79 80 81 82 83 84 85
        on right: 75 76


State 0

    0 $accept: . start "EOF"
    1 start: . empty-EoLList program opt-EoL
    3 empty-EoLList: . %empty  ["funcion", "procedimiento", "inicio", "entero", "booleano", "caracter", "arreglo"]
    4              | . EoLList
   10 EoLList: . EoLList EoL
   11        | . EoL

    EoL  shift, and go to state 1

    $default  reduce using rule 3 (empty-EoLList)

    start          go to state 2
    empty-EoLList  go to state 3
    EoLList        go to state 4


State 1

   11 EoLList: EoL .

    $default  reduce using rule 11 (EoLList)


State 2

    0 $accept: start . "EOF"

    "EOF"  shift, and go to state 5


State 3

    1 start: empty-EoLList . program opt-EoL
    2 program: . subtype-section subprogram-decl "inicio" EoLList stmts EoLList "fin"
    5 subtype-section: . variable-section
    6                | . %empty  ["funcion", "procedimiento", "inicio"]
    9 variable-section: . variable-decl EoLList
   14 variable-decl: . variable-decl EoL type ident-list
   15              | . type ident-list
   18 type: . "entero"
   19     | . "caracter"
   20     | . "booleano"
   21     | . "arreglo" "[" "intConstant" "]" "de" type

    "entero"    shift, and go to state 6
    "booleano"  shift, and go to state 7
    "caracter"  shift, and go to state 8
    "arreglo"   shift, and go to state 9

    $default  reduce using rule 6 (subtype-section)

    program           go to state 10
    subtype-section   go to state 11
    variable-section  go to state 12
    variable-decl     go to state 13
    type              go to state 14


State 4

    4 empty-EoLList: EoLList .  ["funcion", "procedimiento", "inicio", "entero", "booleano", "caracter", "arreglo"]
   10 EoLList: EoLList . EoL

    EoL  shift, and go to state 15

    $default  reduce using rule 4 (empty-EoLList)


State 5

    0 $accept: start "EOF" .

    $default  accept


State 6

   18 type: "entero" .

    $default  reduce using rule 18 (type)


State 7

   20 type: "booleano" .

    $default  reduce using rule 20 (type)


State 8

   19 type: "caracter" .

    $default  reduce using rule 19 (type)


State 9

   21 type: "arreglo" . "[" "intConstant" "]" "de" type

    "["  shift, and go to state 16


State 10

    1 start: empty-EoLList program . opt-EoL
   12 opt-EoL: . EoL
   13        | . %empty  ["EOF"]

    EoL  shift, and go to state 17

    $default  reduce using rule 13 (opt-EoL)

    opt-EoL  go to state 18


State 11

    2 program: subtype-section . subprogram-decl "inicio" EoLList stmts EoLList "fin"
    7 subprogram-decl: . subprogram-decl-list
    8                | . %empty  ["inicio"]
   22 subprogram-decl-list: . subprogram-decl-list subprogramDecl
   23                     | . subprogramDecl
   24 subprogramDecl: . "funcion" "ID" argument-opt ":" type EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL
   25               | . "procedimiento" "ID" argument-opt EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL

    "funcion"        shift, and go to state 19
    "procedimiento"  shift, and go to state 20

    $default  reduce using rule 8 (subprogram-decl)

    subprogram-decl       go to state 21
    subprogram-decl-list  go to state 22
    subprogramDecl        go to state 23


State 12

    5 subtype-section: variable-section .

    $default  reduce using rule 5 (subtype-section)


State 13

    9 variable-section: variable-decl . EoLList
   10 EoLList: . EoLList EoL
   11        | . EoL
   14 variable-decl: variable-decl . EoL type ident-list

    EoL  shift, and go to state 24

    EoLList  go to state 25


State 14

   15 variable-decl: type . ident-list
   16 ident-list: . ident-list "," "ID"
   17           | . "ID"

    "ID"  shift, and go to state 26

    ident-list  go to state 27


State 15

   10 EoLList: EoLList EoL .

    $default  reduce using rule 10 (EoLList)


State 16

   21 type: "arreglo" "[" . "intConstant" "]" "de" type

    "intConstant"  shift, and go to state 28


State 17

   12 opt-EoL: EoL .

    $default  reduce using rule 12 (opt-EoL)


State 18

    1 start: empty-EoLList program opt-EoL .

    $default  reduce using rule 1 (start)


State 19

   24 subprogramDecl: "funcion" . "ID" argument-opt ":" type EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL

    "ID"  shift, and go to state 29


State 20

   25 subprogramDecl: "procedimiento" . "ID" argument-opt EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL

    "ID"  shift, and go to state 30


State 21

    2 program: subtype-section subprogram-decl . "inicio" EoLList stmts EoLList "fin"

    "inicio"  shift, and go to state 31


State 22

    7 subprogram-decl: subprogram-decl-list .  ["inicio"]
   22 subprogram-decl-list: subprogram-decl-list . subprogramDecl
   24 subprogramDecl: . "funcion" "ID" argument-opt ":" type EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL
   25               | . "procedimiento" "ID" argument-opt EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL

    "funcion"        shift, and go to state 19
    "procedimiento"  shift, and go to state 20

    $default  reduce using rule 7 (subprogram-decl)

    subprogramDecl  go to state 32


State 23

   23 subprogram-decl-list: subprogramDecl .

    $default  reduce using rule 23 (subprogram-decl-list)


State 24

   11 EoLList: EoL .  ["funcion", "procedimiento", "inicio", EoL]
   14 variable-decl: variable-decl EoL . type ident-list
   18 type: . "entero"
   19     | . "caracter"
   20     | . "booleano"
   21     | . "arreglo" "[" "intConstant" "]" "de" type

    "entero"    shift, and go to state 6
    "booleano"  shift, and go to state 7
    "caracter"  shift, and go to state 8
    "arreglo"   shift, and go to state 9

    $default  reduce using rule 11 (EoLList)

    type  go to state 33


State 25

    9 variable-section: variable-decl EoLList .  ["funcion", "procedimiento", "inicio"]
   10 EoLList: EoLList . EoL

    EoL  shift, and go to state 15

    $default  reduce using rule 9 (variable-section)


State 26

   17 ident-list: "ID" .

    $default  reduce using rule 17 (ident-list)


State 27

   15 variable-decl: type ident-list .  [EoL]
   16 ident-list: ident-list . "," "ID"

    ","  shift, and go to state 34

    $default  reduce using rule 15 (variable-decl)


State 28

   21 type: "arreglo" "[" "intConstant" . "]" "de" type

    "]"  shift, and go to state 35


State 29

   24 subprogramDecl: "funcion" "ID" . argument-opt ":" type EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL
   26 argument-opt: . "(" argument-comma ")"
   27             | . %empty  [":"]

    "("  shift, and go to state 36

    $default  reduce using rule 27 (argument-opt)

    argument-opt  go to state 37


State 30

   25 subprogramDecl: "procedimiento" "ID" . argument-opt EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL
   26 argument-opt: . "(" argument-comma ")"
   27             | . %empty  [EoL]

    "("  shift, and go to state 36

    $default  reduce using rule 27 (argument-opt)

    argument-opt  go to state 38


State 31

    2 program: subtype-section subprogram-decl "inicio" . EoLList stmts EoLList "fin"
   10 EoLList: . EoLList EoL
   11        | . EoL

    EoL  shift, and go to state 1

    EoLList  go to state 39


State 32

   22 subprogram-decl-list: subprogram-decl-list subprogramDecl .

    $default  reduce using rule 22 (subprogram-decl-list)


State 33

   14 variable-decl: variable-decl EoL type . ident-list
   16 ident-list: . ident-list "," "ID"
   17           | . "ID"

    "ID"  shift, and go to state 26

    ident-list  go to state 40


State 34

   16 ident-list: ident-list "," . "ID"

    "ID"  shift, and go to state 41


State 35

   21 type: "arreglo" "[" "intConstant" "]" . "de" type

    "de"  shift, and go to state 42


State 36

   18 type: . "entero"
   19     | . "caracter"
   20     | . "booleano"
   21     | . "arreglo" "[" "intConstant" "]" "de" type
   26 argument-opt: "(" . argument-comma ")"
   28 argument-comma: . argument-comma "," argument-decl
   29               | . argument-decl
   30 argument-decl: . "var" type "ID"
   31              | . type "ID"

    "var"       shift, and go to state 43
    "entero"    shift, and go to state 6
    "booleano"  shift, and go to state 7
    "caracter"  shift, and go to state 8
    "arreglo"   shift, and go to state 9

    type            go to state 44
    argument-comma  go to state 45
    argument-decl   go to state 46


State 37

   24 subprogramDecl: "funcion" "ID" argument-opt . ":" type EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL

    ":"  shift, and go to state 47


State 38

   10 EoLList: . EoLList EoL
   11        | . EoL
   25 subprogramDecl: "procedimiento" "ID" argument-opt . EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL

    EoL  shift, and go to state 1

    EoLList  go to state 48


State 39

    2 program: subtype-section subprogram-decl "inicio" EoLList . stmts EoLList "fin"
   10 EoLList: EoLList . EoL
   36 statement: . lvalue "<-" expr
   37          | . "llamar" "ID" "(" optional-expr ")"
   38          | . "llamar" "ID"
   39          | . "escriba" argument-comma-list
   40          | . "retorne"
   41          | . "retorne" expr
   42          | . if-statement
   43          | . "mientras" expr "haga" EoLList stmts EoLList "fin" "mientras"
   44          | . "repita" EoLList stmts EoLList "hasta" expr
   45          | . "para" lvalue "<-" expr "hasta" expr "haga" EoLList stmts EoLList "fin" "para"
   46 stmts: . stmts EoLList statement
   47      | . statement
   52 if-statement: . "si" expr opt-EoL "entonces" EoLList stmts else-if-block "fin" "si"
   57 lvalue: . "ID"
   58       | . "ID" "[" expr "]"

    "repita"    shift, and go to state 49
    "escriba"   shift, and go to state 50
    "retorne"   shift, and go to state 51
    "llamar"    shift, and go to state 52
    "para"      shift, and go to state 53
    "mientras"  shift, and go to state 54
    "si"        shift, and go to state 55
    "ID"        shift, and go to state 56
    EoL         shift, and go to state 15

    statement     go to state 57
    stmts         go to state 58
    if-statement  go to state 59
    lvalue        go to state 60


State 40

   14 variable-decl: variable-decl EoL type ident-list .  [EoL]
   16 ident-list: ident-list . "," "ID"

    ","  shift, and go to state 34

    $default  reduce using rule 14 (variable-decl)


State 41

   16 ident-list: ident-list "," "ID" .

    $default  reduce using rule 16 (ident-list)


State 42

   18 type: . "entero"
   19     | . "caracter"
   20     | . "booleano"
   21     | . "arreglo" "[" "intConstant" "]" "de" type
   21     | "arreglo" "[" "intConstant" "]" "de" . type

    "entero"    shift, and go to state 6
    "booleano"  shift, and go to state 7
    "caracter"  shift, and go to state 8
    "arreglo"   shift, and go to state 9

    type  go to state 61


State 43

   18 type: . "entero"
   19     | . "caracter"
   20     | . "booleano"
   21     | . "arreglo" "[" "intConstant" "]" "de" type
   30 argument-decl: "var" . type "ID"

    "entero"    shift, and go to state 6
    "booleano"  shift, and go to state 7
    "caracter"  shift, and go to state 8
    "arreglo"   shift, and go to state 9

    type  go to state 62


State 44

   31 argument-decl: type . "ID"

    "ID"  shift, and go to state 63


State 45

   26 argument-opt: "(" argument-comma . ")"
   28 argument-comma: argument-comma . "," argument-decl

    ")"  shift, and go to state 64
    ","  shift, and go to state 65


State 46

   29 argument-comma: argument-decl .

    $default  reduce using rule 29 (argument-comma)


State 47

   18 type: . "entero"
   19     | . "caracter"
   20     | . "booleano"
   21     | . "arreglo" "[" "intConstant" "]" "de" type
   24 subprogramDecl: "funcion" "ID" argument-opt ":" . type EoLList subtype-section "inicio" EoLList stmts EoLList "fin" EoL

    "entero"    shift, and go to state 6
    "booleano"  shift, and go to state 7
    "caracter"  shift, and go to state 8
    "arreglo"   shift, and go to state 9

    type  go to state 66


State 48

    5 subtype-section: . variable-section
    6                | . %empty  ["inicio"]
    9 variable-section: . variable-decl EoLList
   10 EoLList: EoLList . EoL
   14 variable-decl: . variable-decl EoL type ident-list
   15              | . type ident-list
   18 type: . "entero"
   19     | . "caracter"
   20     | . "booleano"
   21     | . "arreglo" "[" "intConstant" "]" "de" type
   25 subprogramDecl: "procedimiento" "ID" argument-opt EoLList . subtype-section "inicio" EoLList stmts EoLList "fin" EoL

    "entero"    shift, and go to state 6
    "booleano"  shift, and go to state 7
    "caracter"  shift, and go to state 8
    "arreglo"   shift, and go to state 9
    EoL         shift, and go to state 15

    $default  reduce using rule 6 (subtype-section)

    subtype-section   go to state 67
    variable-section  go to state 12
    variable-decl     go to state 13
    type              go to state 14


State 49

   10 EoLList: . EoLList EoL
   11        | . EoL
   44 statement: "repita" . EoLList stmts EoLList "hasta" expr

    EoL  shift, and go to state 1

    EoLList  go to state 68


State 50

   32 argument-comma-list: . argument-comma-list "," argument
   33                    | . argument
   34 argument: . "stringConstant"
   35         | . expr
   39 statement: "escriba" . argument-comma-list
   59 expr: . expr "<" prec
   60     | . expr "<=" prec
   61     | . expr ">" prec
   62     | . expr ">=" prec
   63     | . expr "!=" prec
   64     | . expr "=" prec
   65     | . prec
   66 prec: . prec "+" term
   67     | . prec "-" term
   68     | . prec "o" term
   69     | . term
   70 term: . term "/" power
   71     | . term "mod" power
   72     | . term "*" power
   73     | . term "y" power
   74     | . power
   75 power: . power "^" factor
   76      | . factor
   77 factor: . "intConstant"
   78       | . "charConstant"
   79       | . "verdadero"
   80       | . "falso"
   81       | . "ID"
   82       | . "ID" "(" ")"
   83       | . "ID" "(" exprList ")"
   84       | . "ID" "[" expr "]"
   85       | . "(" expr ")"

    "("               shift, and go to state 69
    "verdadero"       shift, and go to state 70
    "falso"           shift, and go to state 71
    "ID"              shift, and go to state 72
    "charConstant"    shift, and go to state 73
    "stringConstant"  shift, and go to state 74
    "intConstant"     shift, and go to state 75

    argument-comma-list  go to state 76
    argument             go to state 77
    expr                 go to state 78
    prec                 go to state 79
    term                 go to state 80
    power                go to state 81
    factor               go to state 82

